test/Parser/Scope/UnterminatedScope.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:8:1: error: Expected 'RCURLYBRACKET'; got 'END'.
export void function() {

// CHECK: 1 error generated.
